# nurikabe

./: .gitignore  meson.build
nurikabe/: browse.c  browse.h  entry.c  entry.h  main.c
subprojects/: rltui.wrap
